--- a/app/src/main/res/layout/fragment_verrecetas.xml
+++ b/app/src/main/res/layout/fragment_verrecetas.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".VerRecetas">
 
+
+
     <Button
         android:id="@+id/foto"
         android:layout_width="0dp"
@@ -17,6 +19,16 @@
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/flecha_atras"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:src="@drawable/unindent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="2dp"/>
 
     
     <LinearLayout
@@ -173,7 +185,6 @@
 
             </LinearLayout>
     </FrameLayout>
-
 
 
     <FrameLayout
