--- a/app/src/main/res/layout/fragment_editar_perfil.xml
+++ b/app/src/main/res/layout/fragment_editar_perfil.xml
@@ -1,194 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".EditarPerfil">
-
-    <ImageView
-        android:id="@+id/flecha_atras"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:src="@drawable/unindent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/titulo_editar_perfil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/editar_perfil_titulo"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/flecha_atras"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/linea_titulo"
+    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/titulo_editar_perfil"
-        android:layout_gravity="top"
-        android:layout_marginTop="20dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/line_2"
-        app:layout_constraintTop_toBottomOf="@+id/titulo_editar_perfil"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_height="match_parent"
+        tools:context=".EditarPerfil">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        app:cardCornerRadius="250dp"
-        android:background="@drawable/placeholder_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linea_titulo"
-        />
+        <ImageView
+            android:id="@+id/flecha_atras"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:src="@drawable/unindent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/buttonEditProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_gravity="top"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/buttom_border"
-        android:padding="8dp"
-        android:text="@string/editar_foto"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+        <TextView
+            android:id="@+id/titulo_editar_perfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginStart="68dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/editar_perfil_titulo"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/flecha_atras"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/visibilidad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        android:text="Visibilidad"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonEditProfile" />
 
-    <Button
-        android:id="@+id/publicVisibility"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_gravity="top"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/buttom_border"
-        android:backgroundTint="@color/colorSelected"
-        android:padding="8dp"
-        android:text="Público"
-        app:layout_constraintEnd_toStartOf="@+id/privateVisibility"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/visibilidad" />
+        <ImageView
+            android:id="@+id/linea_titulo"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/titulo_editar_perfil"
+            android:layout_gravity="top"
+            android:layout_marginTop="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/line_2"
+            app:layout_constraintTop_toBottomOf="@+id/titulo_editar_perfil"
+            tools:layout_editor_absoluteX="0dp" />
 
-    <Button
-        android:id="@+id/privateVisibility"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_gravity="top"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="192dp"
-        android:background="@drawable/buttom_border"
-        android:backgroundTint="@color/colorUnselected"
-        android:padding="8dp"
-        android:text="Privado"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/visibilidad" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            app:cardCornerRadius="250dp"
+            android:background="@drawable/placeholder_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/linea_titulo"
+            />
 
-    <TextView
-        android:id="@+id/changeUserName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:text="Cambiar nombre de usuario"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/publicVisibility" />
+        <Button
+            android:id="@+id/buttonEditProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_gravity="top"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/buttom_border"
+            android:padding="8dp"
+            android:text="@string/editar_foto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
-    <EditText
-        android:id="@+id/editTextUserName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_margin="20dp"
-        android:inputType="text"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/changeUserName"
-        tools:layout_editor_absoluteX="20dp" />
+        <TextView
+            android:id="@+id/visibilidad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="12dp"
+            android:text="Visibilidad"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonEditProfile" />
 
-    <TextView
-        android:id="@+id/changeDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginStart="24dp"
-        android:text="Cambiar descripción"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />
+        <Button
+            android:id="@+id/publicVisibility"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_gravity="top"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/buttom_border"
+            android:backgroundTint="@color/colorSelected"
+            android:padding="8dp"
+            android:text="Público"
+            app:layout_constraintEnd_toStartOf="@+id/privateVisibility"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/visibilidad" />
 
-    <EditText
-        android:id="@+id/editTextDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_margin="20dp"
-        android:inputType="text"
-        android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/changeDescription"
-        tools:layout_editor_absoluteX="16dp" />
+        <Button
+            android:id="@+id/privateVisibility"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_gravity="top"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="192dp"
+            android:background="@drawable/buttom_border"
+            android:backgroundTint="@color/colorUnselected"
+            android:padding="8dp"
+            android:text="Privado"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/visibilidad" />
 
-    <Button
-        android:id="@+id/buttonChangePassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/buttom_border"
-        android:padding="15dp"
-        android:text="Cambiar contraseña"
-        android:textSize="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
+        <TextView
+            android:id="@+id/changeUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:text="Cambiar nombre de usuario"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/publicVisibility" />
 
-    <Button
-        android:id="@+id/Guardar_cambios"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/buttom_border"
-        android:drawableLeft="@drawable/check_circle"
-        android:drawablePadding="12dp"
-        android:padding="8dp"
-        android:text="Guardar cambios"
-        android:textSize="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />
+        <EditText
+            android:id="@+id/editTextUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_margin="20dp"
+            android:inputType="text"
+            android:padding="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/changeUserName"
+            tools:layout_editor_absoluteX="20dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/changeDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginStart="24dp"
+            android:text="Cambiar descripción"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />
+
+        <EditText
+            android:id="@+id/editTextDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_margin="20dp"
+            android:inputType="text"
+            android:padding="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/changeDescription"
+            tools:layout_editor_absoluteX="16dp" />
+
+        <Button
+            android:id="@+id/buttonChangePassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/buttom_border"
+            android:padding="15dp"
+            android:text="Cambiar contraseña"
+            android:textSize="18dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
+
+        <Button
+            android:id="@+id/Guardar_cambios"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/buttom_border"
+            android:drawableLeft="@drawable/check_circle"
+            android:drawablePadding="12dp"
+            android:padding="8dp"
+            android:text="Guardar cambios"
+            android:textSize="18dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
