--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -88,6 +88,9 @@
         <action
             android:id="@+id/action_pantallaMenuInferior_to_verRecetas"
             app:destination="@id/verRecetas" />
+        <action
+            android:id="@+id/action_pantallaMenuInferior_to_guardarRecetas"
+            app:destination="@id/guardarRecetas" />
     </fragment>
     <fragment android:id="@+id/pantallaEditarPefil"
         android:name="com.example.trabajofinalv2.EditarPerfil"
@@ -150,9 +153,6 @@
             android:id="@+id/action_verRecetas_to_pantallaMenuInferior"
             app:destination="@id/pantallaMenuInferior" />
 
-        <action
-            android:id="@+id/action_verRecetas_to_pantallaMenuInferior"
-            app:destination="@id/pantallaMenuInferior" />
     </fragment>
     <fragment
         android:id="@+id/cambiarContraseña"
@@ -167,5 +167,13 @@
             app:destination="@id/pantallaMenuInferior" />
     </fragment>
 
+    <fragment android:id="@+id/guardarRecetas"
+        android:name="com.example.trabajofinalv2.PantallaGuardarRecetas"
+        android:label="fragment_guardarrecetas"
+        tools:layout="@layout/fragment_guardarrecetas" >
+        <action
+            android:id="@+id/action_guardarRecetas_to_pantallaMenuInferior"
+            app:destination="@id/pantallaMenuInferior" />
+    </fragment>
 
 </navigation>
