--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -88,6 +88,12 @@
         <action
             android:id="@+id/action_pantallaMenuInferior_to_verRecetas"
             app:destination="@id/verRecetas" />
+        <action
+            android:id="@+id/action_pantallaMenuInferior_to_verRecetas2"
+            app:destination="@id/verRecetas" />
+        <action
+            android:id="@+id/action_pantallaMenuInferior_to_guardarrecetas"
+            app:destination="@id/guardarrecetas" />
     </fragment>
     <fragment android:id="@+id/pantallaEditarPefil"
         android:name="com.example.trabajofinalv2.EditarPerfil"
@@ -149,9 +155,8 @@
         <action
             android:id="@+id/action_verRecetas_to_pantallaMenuInferior"
             app:destination="@id/pantallaMenuInferior" />
-
         <action
-            android:id="@+id/action_verRecetas_to_pantallaMenuInferior"
+            android:id="@+id/action_verRecetas_to_pantallaMenuInferior2"
             app:destination="@id/pantallaMenuInferior" />
     </fragment>
     <fragment
@@ -166,6 +171,13 @@
             android:id="@+id/action_cambiarContraseña_to_pantallaMenuInferior2"
             app:destination="@id/pantallaMenuInferior" />
     </fragment>
-
+    <fragment android:id="@+id/guardarrecetas"
+        android:name="com.example.trabajofinalv2.PantallaGuardarRecetas"
+        android:label="fragment_pantalla_guardarrecetas"
+        tools:layout="@layout/fragment_guardarrecetas" >
+        <action
+            android:id="@+id/action_guardarrecetas_to_pantallaMenuInferior"
+            app:destination="@id/pantallaMenuInferior" />
+    </fragment>
 
 </navigation>
