--- a/app/src/main/res/layout/fragment_anadir_receta1.xml
+++ b/app/src/main/res/layout/fragment_anadir_receta1.xml
@@ -104,9 +104,11 @@
             android:layout_height="108dp"
             android:layout_below="@id/recipeDescriptionTitle"
             android:layout_centerInParent="true"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:hint="Descripcion de la receta"
-            android:inputType="text"/>
+            android:inputType="textMultiLine"
+            android:maxLines="3"
+            android:lines="3"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <!-- Pasos de elaboración -->
     <TextView
