Correos por usuarios Ahora se pueden pulsar todas las recetas y se redirigen El perfil visualiza las recetas por correo y no por usuario, por lo que los usuarios pueden cambiar su nombre y siguen teniendo enlazados las recetas

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -178,6 +178,9 @@
         <action
             android:id="@+id/action_guardarrecetas_to_pantallaMenuInferior"
             app:destination="@id/pantallaMenuInferior" />
+        <action
+            android:id="@+id/action_guardarrecetas_to_verRecetas"
+            app:destination="@id/verRecetas" />
     </fragment>
 
 </navigation>
