--- a/app/src/main/res/layout/fragment_pantalla_de_registro.xml
+++ b/app/src/main/res/layout/fragment_pantalla_de_registro.xml
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:gravity="center"
-        android:text="Correo Electrocino"
+        android:text="Correo Electronico"
         android:textColor="#000000"
         android:textSize="20sp"
         android:layout_marginLeft="100px"
